plugins {
    id 'java'
    id 'application'
    id "org.sonarqube" version "7.1.0.6387"
    id 'jacoco'
}

sonar {
    properties {
        property "sonar.projectKey", "Invaders-SDP-C-only_Invaders-SDP-23292-Csonly"
        property "sonar.organization", "invaders-sdp-c-only"
        property "sonar.coverage.jacoco.xmlReportPaths", "build/reports/jacoco/test/jacocoTestReport.xml"
    }
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.mockito:mockito-core:5.14.2'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.14.2'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.11.3'
}

application {
    mainClass = 'engine.Core'
}

sourceSets {
    main {
        java { srcDirs = ['src'] }
        resources { srcDirs = ['res'] }
    }
    test {
        java { srcDirs = ['test'] }
        resources { srcDirs = ['test_res'] }
    }
}

java {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}

jar {
    manifest { attributes 'Main-Class': 'engine.Core' }
    from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
}

test {
    useJUnitPlatform()

    // ★ 3. 테스트가 끝나면 무조건 커버리지 리포트를 만들도록 설정
    finalizedBy jacocoTestReport

    jvmArgs = [
            '-XX:+EnableDynamicAgentLoading',
            '--add-opens=java.base/java.lang=ALL-UNNAMED',
            '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
            '--add-opens=java.base/java.io=ALL-UNNAMED'
    ]
}

jacocoTestReport {
    dependsOn test // 리포트 만들기 전에 테스트 먼저 수행
    reports {
        // SonarQube는 XML 형식만 읽을 수 있습니다. (html, csv는 사람용)
        xml.required = true
        html.required = true
    }
}